# X-TCAS

./: .gitignore  CMakeLists.txt
libraries/SDK/: README.txt  license.txt
libraries/SDK/CHeaders/Widgets/: XPStandardWidgets.h  XPUIGraphics.h  XPWidgetDefs.h  XPWidgetUtils.h  XPWidgets.h
libraries/SDK/CHeaders/Wrappers/: XPCBroadcaster.cpp  XPCBroadcaster.h  XPCDisplay.cpp  XPCDisplay.h  XPCListener.cpp  XPCListener.h  XPCProcessing.cpp  XPCProcessing.h  XPCWidget.cpp  XPCWidget.h  XPCWidgetAttachments.cpp  XPCWidgetAttachments.h
libraries/SDK/CHeaders/XPLM/: XPLMCamera.h  XPLMDataAccess.h  XPLMDefs.h  XPLMDisplay.h  XPLMGraphics.h  XPLMInstance.h  XPLMMap.h  XPLMMenus.h  XPLMNavigation.h  XPLMPlanes.h  XPLMPlugin.h  XPLMProcessing.h  XPLMScenery.h  XPLMSound.h  XPLMUtilities.h  XPLMWeather.h
libraries/SDK/Delphi/Widgets/: XPStandardWidgets.pas  XPUIGraphics.pas  XPWidgetDefs.pas  XPWidgetUtils.pas  XPWidgets.pas
libraries/SDK/Delphi/XPLM/: XPLMCamera.pas  XPLMDataAccess.pas  XPLMDefs.pas  XPLMDisplay.pas  XPLMGraphics.pas  XPLMInstance.pas  XPLMMap.pas  XPLMMenus.pas  XPLMNavigation.pas  XPLMPlanes.pas  XPLMPlugin.pas  XPLMProcessing.pas  XPLMScenery.pas  XPLMSound.pas  XPLMUtilities.pas  XPLMWeather.pas
libraries/libacfutils-redist/mingw64/include/: cairo-features.h
libraries/openal-soft/lin64/lib/pkgconfig/: openal.pc
libraries/openal-soft/win64/lib/pkgconfig/: openal.pc
qmake/: Makefile.Debug  Makefile.Release
src/: CMakeLists.txt  compile_commands.json  dbg_log.h  src.project  src.workspace  vsi.c  vsi.h  xplane.c  xtcas.c
